--- a/about.html
+++ b/about.html
@@ -1,49 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-  <!-- FAVICON -->
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-  <!-- JSON-LD Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "EducationalOrganization",
-    "name": "Zhev Education Abroad Consultancy",
-    "url": "https://zheveducation.com/about.html",
-    "description": "Zhev Education provides personalised study abroad counselling, admissions support, SOP/LOR writing, university shortlisting, scholarship assistance and visa guidance for USA, UK, Canada, Australia, Ireland, Europe and UAE.",
-    "email": "info@zheveducation.com",
-    "telephone": "+91-9594538979",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Mumbai",
-      "addressRegion": "Maharashtra",
-      "addressCountry": "IN"
-    }
-  }
-  </script>
-
-  <link rel="canonical" href="https://zheveducation.com/about.html">
-
-  <!-- SEO -->
-  <title>About Zhev Education – Study Abroad Consultants in India</title>
-  <meta name="description" content="Learn about Zhev Education, a leading study abroad consultancy helping students across India with global admissions, SOP/LOR drafting, visas, scholarships and complete guidance for universities worldwide.">
-  <meta name="keywords" content="about zhev education, overseas consultancy, study abroad india, study abroad consultants mumbai">
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO -->
+  <title>About Us – Zhev Education Abroad Consultancy</title>
+  <meta name="description" content="Learn about Zhev Education, India's trusted study abroad consultancy offering guidance for USA, UK, Canada, Ireland, Australia, Europe and more. Ethical counselling, university shortlisting, SOP/LOR help, visa support.">
+  <meta name="keywords" content="study abroad consultants, about study abroad, Zhev Education, best study abroad consultants in India, admissions guidance, visa support, university shortlisting">
+  <meta name="author" content="Zhev Education Consultancy">
+
+  <!-- OG Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="About Us – Zhev Education Abroad Consultancy">
+  <meta property="og:description" content="Zhev Education offers personalised and ethical study abroad guidance for students applying to USA, UK, Canada, Ireland, Australia, Europe and UAE.">
+  <meta property="og:url" content="https://zheveducation.com/about.html">
+  <meta property="og:image" content="assets/og-image.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="assets/style.css">
 
   <style>
-    /* HEADER */
     header {
       background: #2F3A56;
-      padding: 15px 20px;
+      padding: 15px;
       color: white;
       display: flex;
       justify-content: space-between;
@@ -52,69 +39,36 @@
 
     nav {
       display: flex;
-      gap: 20px;
       align-items: center;
+      gap: 20px;
     }
 
     nav a {
       color: white;
       text-decoration: none;
       font-weight: 500;
-      font-size: 16px;
     }
 
-    /* HAMBURGER */
+    /* Mobile Menu */
     .hamburger {
       display: none;
       font-size: 30px;
-      color: white;
       cursor: pointer;
-    }
-
-    /* CONTENT */
-    section {
-      padding: 30px 20px;
-    }
-
-    section h2 {
-      color: #2F3A56;
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-
-    section p,
-    section ul {
-      color: #333;
-      font-size: 17px;
-      line-height: 1.7;
-      max-width: 900px;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    /* FOOTER */
-    footer {
-      background: #2F3A56;
       color: white;
-      text-align: center;
-      padding: 14px;
-      font-size: 14px;
     }
 
-    /* MOBILE */
-    @media(max-width: 768px) {
+    @media (max-width: 768px) {
       nav {
         display: none;
         flex-direction: column;
         width: 100%;
-        padding: 10px;
         background: #2F3A56;
+        padding: 10px;
+        gap: 10px;
       }
 
       nav a {
-        margin: 10px 0;
+        display: block;
       }
 
       .hamburger {
@@ -134,67 +88,58 @@
 
 <body>
 
-<!-- HEADER -->
-<header>
-  <span class="hamburger" onclick="toggleMenu()">☰</span>
+  <!-- HEADER -->
+  <header>
+    <span class="hamburger" onclick="toggleMenu()">☰</span>
 
-  <nav id="mobileNav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="countries.html">Countries</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <nav id="mobileNav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="countries.html">Countries</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<!-- ABOUT SECTION -->
-<section>
-  <h2>Who We Are</h2>
-  <p>
-    Zhev Education is a leading study abroad consultancy that helps students across India achieve their global
-    education goals. We provide transparent, ethical and personalised guidance for admissions to top universities
-    in the USA, UK, Canada, Ireland, Australia, Europe and the Middle East.
-  </p>
-  <p>
-    With years of experience and a commitment to student-first counselling, we guide you from course selection
-    to visa approval and everything in between.
-  </p>
-</section>
+  <!-- PAGE CONTENT -->
+  <section style="padding:20px; max-width:900px; margin:auto;">
+    <h1>Who We Are</h1>
+    <p>
+      Zhev Education is a leading study abroad consultancy that helps students across India achieve
+      their global education goals. We provide transparent, ethical and personalised guidance for
+      admissions to top universities in the USA, UK, Canada, Ireland, Australia, Europe and the Middle East.
+    </p>
+    <p>
+      With years of experience and a commitment to student-first counselling, we guide you from course
+      selection to visa approval and everything in between.
+    </p>
+  </section>
 
-<section>
-  <h2>Our Mission</h2>
-  <p>
-    Our mission is to simplify the study abroad journey for every student. We believe every student deserves
-    accurate information, personalised guidance and a fair chance at international education opportunities.
-  </p>
-</section>
+  <section style="padding:20px; max-width:900px; margin:auto;">
+    <h2>Our Mission</h2>
+    <p>
+      Our mission is to simplify the study abroad journey for every student. We believe every student
+      deserves accurate information, personalised guidance and a fair chance at international education
+      opportunities.
+    </p>
+  </section>
 
-<section>
-  <h2>Why Students Choose Zhev Education</h2>
-  <ul>
-    <li>Expert counselling for top global universities</li>
-    <li>Professional SOP & LOR drafting</li>
-    <li>Specialised guidance for programs in Engineering, CS, MBA, Design, Fashion, MBBS, Hospitality, Sports, Game Design & more</li>
-    <li>Scholarship guidance & education loan assistance</li>
-    <li>Complete visa documentation & interview training</li>
-    <li>Dedicated application filing support</li>
-    <li>Ethical, transparent and personalised counselling</li>
-  </ul>
-</section>
+  <section style="padding:20px; max-width:900px; margin:auto;">
+    <h2>Why Choose Us</h2>
+    <ul>
+      <li>Transparent and ethical counselling with no hidden agenda</li>
+      <li>Personalised university lists based on your academic profile</li>
+      <li>Strong focus on SOP & LOR quality to maximise admission chances</li>
+      <li>Visa documentation support and interview preparation</li>
+      <li>Scholarship guidance and financial planning advise</li>
+      <li>Support for USA, UK, Canada, Ireland, Australia, Europe and UAE</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Our Student Success</h2>
-  <p>
-    Students mentored by Zhev Education have secured admissions into leading institutions across the USA,
-    UK, Canada, Ireland, Europe and Australia. Many have also received scholarships, assistantships and
-    strong post-study work opportunities in their chosen countries.
-  </p>
-</section>
-
-<!-- FOOTER -->
-<footer>
-  © 2025 Zhev Education Abroad Consultancy
-</footer>
+  <!-- FOOTER -->
+  <footer style="background:#2F3A56; color:white; text-align:center; padding:12px;">
+    © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com • +91 95945 38979
+  </footer>
 
 </body>
 </html>
