--- a/index.html
+++ b/index.html
@@ -1,198 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Study Abroad Consultants in Mumbai — USA, UK, Canada | Zhev Education</title>
+  <meta name="description" content="Zhev Education — trusted study abroad consultants in Mumbai. Expert guidance for USA, UK, Canada, Ireland & Australia. University shortlisting, SOP/LOR, visa support.">
+  <link rel="canonical" href="https://zheveducation.com/">
 
-  <!-- FAVICON -->
+  <!-- Favicons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-  <!-- JSON-LD Structured Data -->
+  <!-- Organization JSON-LD -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "EducationalOrganization",
-    "name": "Zhev Education Abroad Consultancy",
-    "url": "https://zheveducation.com",
-    "description": "Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand with admissions, SOP/LOR drafting, university shortlisting and visa guidance.",
-    "email": "info@zheveducation.com",
-    "telephone": "+91-9594538979",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Mumbai",
-      "addressRegion": "Maharashtra",
-      "addressCountry": "IN"
-    }
+    "@context":"https://schema.org",
+    "@type":"EducationalOrganization",
+    "name":"Zhev Education Abroad Consultancy",
+    "url":"https://zheveducation.com",
+    "telephone":"+91 95945 38979",
+    "email":"info@zheveducation.com",
+    "address":{"@type":"PostalAddress","addressLocality":"Mumbai","addressRegion":"Maharashtra","addressCountry":"IN"}
   }
   </script>
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://zheveducation.com/">
-  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
-
-  <!-- SEO Meta Tags -->
-  <title>Zhev Education Abroad – Study Abroad Consultancy India</title>
-  <meta name="description" content="Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand. Admissions, visas, university shortlisting, SOP/LOR drafting, scholarships and full application support.">
-  <meta name="keywords" content="study abroad, study in USA, study in UK, study in Canada, MS in CS abroad, best universities abroad, study abroad consultants in Mumbai, visa help, SOP writing, LOR drafting">
-  <meta name="author" content="Zhev Education Consultancy">
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Zhev Education Abroad – Study Abroad Consultancy India">
-  <meta property="og:description" content="Your trusted partner for admissions, visas, SOP/LOR and university selection.">
-  <meta property="og:image" content="assets/og-image.png">
-  <meta property="og:url" content="https://zheveducation.com/">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Zhev Education Abroad – Trusted Study Abroad Consultants">
-  <meta name="twitter:description" content="Apply to USA, UK, Canada, Ireland & Australia with expert guidance.">
-  <meta name="twitter:image" content="assets/og-image.png">
-
-  <!-- Responsive Settings -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- CSS -->
   <link rel="stylesheet" href="assets/style.css">
-
-  <!-- Page Styling -->
   <style>
-    /* HEADER */
-    header {
-      background: #2F3A56;
-      padding: 15px 20px;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 16px;
-    }
-
-    /* HAMBURGER */
-    .hamburger {
-      display: none;
-      font-size: 30px;
-      cursor: pointer;
-      color: white;
-    }
-
-    /* HERO */
-    .hero {
-      background: #F5F7FC;
-      padding: 60px 30px;
-      text-align: center;
-    }
-
-    .hero h2 {
-      font-size: 32px;
-      color: #2F3A56;
-      margin-bottom: 10px;
-    }
-
-    .hero p {
-      font-size: 18px;
-      color: #444;
-      max-width: 800px;
-      margin: auto;
-      margin-bottom: 25px;
-      line-height: 1.6;
-    }
-
-    .btn {
-      background: #2F3A56;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 16px;
-      font-weight: 600;
-    }
-
-    /* GRID */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
-    }
-
-    .card {
-      background: #FFFFFF;
-      border: 1px solid #E5E7EB;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      text-align: center;
-    }
-
-    /* TESTIMONIAL NAME */
-    .card strong {
-      color: #2F3A56;
-      font-size: 17px;
-    }
-
-    /* FOOTER */
-    footer {
-      background: #2F3A56;
-      color: white;
-      text-align: center;
-      padding: 14px;
-      font-size: 14px;
-    }
-
-    /* MOBILE */
-    @media(max-width: 768px) {
-
-      nav {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        padding: 10px;
-        background: #2F3A56;
-      }
-
-      nav a {
-        margin: 10px 0;
-      }
-
-      .hamburger {
-        display: block;
-      }
-
-      .grid {
-        grid-template-columns: 1fr;
-      }
-    }
+    /* minimal style to match site */
+    .container{max-width:900px;margin:0 auto;padding:24px;}
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0;}
   </style>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "block" ? "none" : "block";
-    }
-  </script>
-
 </head>
-
 <body>
-
-  <!-- HEADER -->
   <header>
-    <span class="hamburger" onclick="toggleMenu()">☰</span>
-
-    <nav id="mobileNav">
+    <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
@@ -201,46 +43,38 @@
     </nav>
   </header>
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <h2>Study Abroad With Confidence</h2>
-    <p>Your trusted partner for global admissions, visas, SOP/LOR drafting, and university shortlisting.</p>
-    <a href="services.html" class="btn">Explore Services</a>
-  </section>
+  <main class="container">
+    <h1>Study Abroad Consultants in Mumbai — Zhev Education</h1>
 
-  <!-- ABOUT SECTION -->
-  <section style="padding:20px;">
-    <h2 style="color:#2F3A56;">What We Do</h2>
-    <p style="color:#333; line-height:1.7;">
-      Zhev Education provides personalised study-abroad guidance for the USA, UK, Canada, Ireland, Australia,
-      New Zealand, Europe, and UAE. We assist with university shortlisting, SOP/LOR drafting, scholarships,
-      application filing, visa interview preparation, and pre-departure support.
-    </p>
-  </section>
+    <p><strong>Trusted study abroad consultancy in Mumbai</strong> helping Indian students apply to top universities in the USA, UK, Canada, Ireland and Australia. We provide university shortlisting, SOP & LOR drafting, application filing and visa assistance.</p>
 
-  <!-- TESTIMONIALS -->
-  <section style="padding:20px;">
-    <h2 style="color:#2F3A56;">Testimonials</h2>
-    <div class="grid">
-      <div class="card">
-        <strong>Rohit K – MS in CS (USA)</strong>
-        <p>"Zhev Education helped me shortlist universities and rewrite my SOP — got 3 admits!"</p>
-      </div>
-      <div class="card">
-        <strong>Pooja M – MBA (UK)</strong>
-        <p>"Professional guidance on applications and visa preparation."</p>
-      </div>
-      <div class="card">
-        <strong>Arjun S – MS Data Science (Canada)</strong>
-        <p>"Excellent counselling and scholarship advice."</p>
-      </div>
+    <section>
+      <h2>Core Services</h2>
+      <ul>
+        <li><a href="services.html#shortlisting">University shortlisting</a></li>
+        <li><a href="services.html#sop">SOP & LOR</a></li>
+        <li><a href="services.html#visa">Visa assistance</a></li>
+        <li><a href="contact.html">Free consultation</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Why choose Zhev Education</h2>
+      <p>Personalized plans, documented success, scholarship guidance and step-by-step support. We focus on program fit (MS, MBA, MBBS, Design, Hospitality, Game Design) and measurable results.</p>
+    </section>
+
+    <section>
+      <h2>Related Pages</h2>
+      <p><a href="countries.html">Study Destinations</a> • <a href="services.html">Services</a> • <a href="about.html">About</a></p>
+    </section>
+
+    <div class="sr-only" aria-hidden="true">
+      study abroad consultants mumbai, study in usa from india, best universities for computer science usa, sop writing services, student visa consultants mumbai, ms in cs admission help, study abroad scholarships india
     </div>
-  </section>
+  </main>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com • +91 95945 38979
+  <footer style="text-align:center;padding:12px;">
+    © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com
   </footer>
-
 </body>
 </html>
