--- a/about.html
+++ b/about.html
@@ -1,145 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>About Zhev Education — Study Abroad Consultants in Mumbai</title>
+  <meta name="description" content="About Zhev Education — Mumbai based study abroad consultancy providing university shortlisting, SOP/LOR drafting, scholarships and visa guidance for USA, UK, Canada & Australia.">
+  <link rel="canonical" href="https://zheveducation.com/about.html">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- SEO -->
-  <title>About Us – Zhev Education Abroad Consultancy</title>
-  <meta name="description" content="Learn about Zhev Education, India's trusted study abroad consultancy offering guidance for USA, UK, Canada, Ireland, Australia, Europe and more. Ethical counselling, university shortlisting, SOP/LOR help, visa support.">
-  <meta name="keywords" content="study abroad consultants, about study abroad, Zhev Education, best study abroad consultants in India, admissions guidance, visa support, university shortlisting">
-  <meta name="author" content="Zhev Education Consultancy">
-
-  <!-- OG Tags -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="About Us – Zhev Education Abroad Consultancy">
-  <meta property="og:description" content="Zhev Education offers personalised and ethical study abroad guidance for students applying to USA, UK, Canada, Ireland, Australia, Europe and UAE.">
-  <meta property="og:url" content="https://zheveducation.com/about.html">
-  <meta property="og:image" content="assets/og-image.png">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="assets/style.css">
-
-  <style>
-    header {
-      background: #2F3A56;
-      padding: 15px;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    /* Mobile Menu */
-    .hamburger {
-      display: none;
-      font-size: 30px;
-      cursor: pointer;
-      color: white;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        background: #2F3A56;
-        padding: 10px;
-        gap: 10px;
-      }
-
-      nav a {
-        display: block;
-      }
-
-      .hamburger {
-        display: block;
-      }
-    }
-  </style>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "block" ? "none" : "block";
-    }
+  <script type="application/ld+json">
+  {"@context":"https://schema.org","@type":"Organization","name":"Zhev Education Abroad Consultancy","url":"https://zheveducation.com/about.html"}
   </script>
 
+  <link rel="stylesheet" href="assets/style.css">
+  <style>.container{max-width:900px;margin:0 auto;padding:24px}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}</style>
 </head>
-
 <body>
+  <header><nav><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></header>
 
-  <!-- HEADER -->
-  <header>
-    <span class="hamburger" onclick="toggleMenu()">☰</span>
+  <main class="container">
+    <h1>About Zhev Education</h1>
 
-    <nav id="mobileNav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="countries.html">Countries</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+    <p>Zhev Education is a Mumbai-based study abroad consultancy helping students secure admissions to reputable universities in the USA, UK, Canada, Ireland and Australia. We provide personalised counseling, data-driven shortlists and end-to-end application support.</p>
 
-  <!-- PAGE CONTENT -->
-  <section style="padding:20px; max-width:900px; margin:auto;">
-    <h1>Who We Are</h1>
-    <p>
-      Zhev Education is a leading study abroad consultancy that helps students across India achieve
-      their global education goals. We provide transparent, ethical and personalised guidance for
-      admissions to top universities in the USA, UK, Canada, Ireland, Australia, Europe and the Middle East.
-    </p>
-    <p>
-      With years of experience and a commitment to student-first counselling, we guide you from course
-      selection to visa approval and everything in between.
-    </p>
-  </section>
+    <h2>Our approach</h2>
+    <p>We assess profile-fit (academics, tests, experience), create tiered shortlists (ambitious, target, safe), craft program-specific SOPs, coordinate LORs, and support visa readiness. Our process is transparent and results-oriented.</p>
 
-  <section style="padding:20px; max-width:900px; margin:auto;">
-    <h2>Our Mission</h2>
-    <p>
-      Our mission is to simplify the study abroad journey for every student. We believe every student
-      deserves accurate information, personalised guidance and a fair chance at international education
-      opportunities.
-    </p>
-  </section>
+    <h2>Local presence & support</h2>
+    <p>With local Mumbai support, we offer in-person consultations, document verification and mock visa interviews. We also provide scholarship research and education loan guidance.</p>
 
-  <section style="padding:20px; max-width:900px; margin:auto;">
-    <h2>Why Choose Us</h2>
-    <ul>
-      <li>Transparent and ethical counselling with no hidden agenda</li>
-      <li>Personalised university lists based on your academic profile</li>
-      <li>Strong focus on SOP & LOR quality to maximise admission chances</li>
-      <li>Visa documentation support and interview preparation</li>
-      <li>Scholarship guidance and financial planning advise</li>
-      <li>Support for USA, UK, Canada, Ireland, Australia, Europe and UAE</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Related Pages</h2>
+      <p><a href="services.html">Services</a> • <a href="countries.html">Destinations</a> • <a href="contact.html">Contact</a></p>
+    </section>
 
-  <!-- FOOTER -->
-  <footer style="background:#2F3A56; color:white; text-align:center; padding:12px;">
-    © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com • +91 95945 38979
-  </footer>
+    <div class="sr-only" aria-hidden="true">
+      zhev education about, study abroad consultants mumbai, best study abroad agencies india, university shortlisting services, sop experts mumbai
+    </div>
+  </main>
 
+  <footer style="text-align:center;padding:12px;">© 2025 Zhev Education Abroad Consultancy</footer>
 </body>
 </html>
