--- a/services.html
+++ b/services.html
@@ -1,263 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Study Abroad Services — SOP, Visa, Shortlisting | Zhev Education</title>
+  <meta name="description" content="Services by Zhev Education: university shortlisting, SOP & LOR writing, application filing, scholarship guidance and visa assistance for USA, UK, Canada and Australia.">
+  <link rel="canonical" href="https://zheveducation.com/services.html">
 
-  <!-- FAVICON -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-  <!-- JSON-LD Structured Data -->
+  <!-- Service JSON-LD + FAQ -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "Service",
-    "name": "Study Abroad Services – Zhev Education",
-    "provider": {
-      "@type": "EducationalOrganization",
-      "name": "Zhev Education Abroad Consultancy",
-      "url": "https://zheveducation.com/services.html"
-    },
-    "serviceType": [
-      "University Shortlisting",
-      "Application Filing",
-      "SOP Writing",
-      "LOR Assistance",
-      "Visa Assistance",
-      "Scholarship Guidance",
-      "Education Loan Support",
-      "Pre-Departure Assistance"
-    ],
-    "areaServed": "India"
+    "@context":"https://schema.org",
+    "@type":"Service",
+    "name":"Study Abroad Consultancy Services",
+    "provider":{"@type":"EducationalOrganization","name":"Zhev Education","url":"https://zheveducation.com/services.html"},
+    "serviceType":["University Shortlisting","SOP Writing","LOR Coordination","Visa Assistance","Scholarship Guidance"]
   }
   </script>
 
-  <link rel="canonical" href="https://zheveducation.com/services.html">
-
-  <!-- SEO -->
-  <title>Study Abroad Services | SOP, Visa, Scholarships & Applications</title>
-  <meta name="description" content="Explore Zhev Education’s study abroad services including university shortlisting, SOP/LOR drafting, application filing, visa support, scholarships, education loans and pre-departure guidance.">
-  <meta name="keywords" content="study abroad services, SOP writing, LOR drafting, visa support India, scholarship help, application filing, overseas consultancy Mumbai">
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="assets/style.css">
-
-  <style>
-    /* HEADER */
-    header {
-      background: #2F3A56;
-      padding: 15px 20px;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 16px;
-    }
-
-    .hamburger {
-      display: none;
-      font-size: 30px;
-      color: white;
-      cursor: pointer;
-    }
-
-    /* SECTIONS */
-    section {
-      padding: 30px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    section h2 {
-      color: #2F3A56;
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-
-    section h3 {
-      color: #2F3A56;
-      margin-top: 25px;
-      margin-bottom: 8px;
-      font-size: 22px;
-    }
-
-    section p,
-    section ul {
-      color: #333;
-      font-size: 17px;
-      line-height: 1.7;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    /* GRID FOR TESTIMONIALS */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3,1fr);
-      gap: 15px;
-      margin-top: 20px;
-    }
-
-    .card {
-      background: #FFFFFF;
-      padding: 20px;
-      border: 1px solid #E5E7EB;
-      border-radius: 8px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.06);
-    }
-
-    .card strong {
-      color: #2F3A56;
-      font-size: 17px;
-    }
-
-    /* FOOTER */
-    footer {
-      background: #2F3A56;
-      color: white;
-      text-align: center;
-      padding: 14px;
-      font-size: 14px;
-    }
-
-    /* MOBILE */
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        background: #2F3A56;
-        width: 100%;
-        padding: 10px;
-      }
-
-      nav a {
-        margin: 10px 0;
-      }
-
-      .hamburger {
-        display: block;
-      }
-
-      .grid {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "block" ? "none" : "block";
-    }
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"FAQPage",
+    "mainEntity":[
+      {"@type":"Question","name":"How long does SOP writing take?","acceptedAnswer":{"@type":"Answer","text":"Typically 3–5 business days including revisions."}},
+      {"@type":"Question","name":"Do you help with scholarships?","acceptedAnswer":{"@type":"Answer","text":"Yes — we identify and guide on university and external scholarship applications."}},
+      {"@type":"Question","name":"Can you help with visa interview preparation?","acceptedAnswer":{"@type":"Answer","text":"Yes — we provide mock interviews and document checks for visa applications."}}
+    ]
+  }
   </script>
 
+  <link rel="stylesheet" href="assets/style.css">
+  <style>.container{max-width:900px;margin:0 auto;padding:24px}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}</style>
 </head>
-
 <body>
+  <header><nav><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></header>
 
-<!-- HEADER -->
-<header>
-  <span class="hamburger" onclick="toggleMenu()">☰</span>
-  <nav id="mobileNav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="countries.html">Countries</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+  <main class="container">
+    <h1>Study Abroad Services — University Shortlisting, SOP & Visa Help</h1>
 
-<!-- MAIN CONTENT -->
-<section>
-  <h2>Our Services</h2>
-  <p>
-    Zhev Education provides complete study abroad support for students applying to universities in the USA,
-    UK, Canada, Ireland, Australia, New Zealand, Europe and the Middle East. From shortlisting universities
-    to visa approval, our team ensures a smooth and stress-free admissions journey.
-  </p>
+    <p>We provide end-to-end services for students applying to international programs: university shortlisting, SOP & LOR drafting, application filing, scholarship guidance and visa assistance. Our deliverables include personalised lists, document checklists and coaching.</p>
 
-  <h3>1. University Shortlisting</h3>
-  <p>
-    We curate a personalised list of Ambitious, Moderate and Safe universities based on your academics,
-    experience, test scores, country preferences and budget.
-  </p>
+    <h2 id="shortlisting">University Shortlisting</h2>
+    <p>Personalized shortlists (ambitious, target, safe) based on academics, budget and career goals.</p>
 
-  <h3>2. SOP & LOR Drafting</h3>
-  <p>
-    Our expert writing team creates strong, personalised Statements of Purpose and Letters of Recommendation
-    that highlight your strengths, achievements and program fit.
-  </p>
+    <h2 id="sop">SOP & LOR Writing</h2>
+    <p>Program-focused SOPs and managed LOR coordination to highlight your fit and strengths.</p>
 
-  <h3>3. Application Filing</h3>
-  <p>
-    We assist with university portals, UCAS, CommonApp, OUAC, UniAssist and more. This includes essay reviews,
-    resume creation, document checks, uploads and deadlines.
-  </p>
+    <h2 id="visa">Visa Assistance</h2>
+    <p>Document verification, mock interviews, and step-by-step filing support for student visas.</p>
 
-  <h3>4. Scholarship Guidance</h3>
-  <p>
-    We help students identify and apply for university scholarships, government grants, tuition waivers and
-    assistantship opportunities.
-  </p>
+    <section>
+      <h2>Related Pages</h2>
+      <p><a href="contact.html">Book a free consultation</a> • <a href="countries.html">Destinations</a></p>
+    </section>
 
-  <h3>5. Visa Assistance</h3>
-  <p>
-    Our visa team provides document checklists, form assistance and mock interviews for USA, UK, Canada,
-    Ireland, Australia and Dubai student visas.
-  </p>
+    <div class="sr-only" aria-hidden="true">sop writing services india, visa consultants mumbai, application filing uk usa canada, university shortlisting experts</div>
+  </main>
 
-  <h3>6. Education Loan Assistance</h3>
-  <p>
-    We guide you through education loan documentation, bank options, collateral requirements and interest rates.
-  </p>
-
-  <h3>7. Pre-Departure Guidance</h3>
-  <p>
-    Includes support for accommodation, forex, travel packing, airport guidance, insurance and arrival planning.
-  </p>
-</section>
-
-<!-- TESTIMONIALS -->
-<section>
-  <h2>Testimonials</h2>
-  <div class="grid">
-    <div class="card">
-      <strong>Devansh R.</strong>
-      <p>"The SOP team helped me build a strong MS in CS application — got 3 admits!"</p>
-    </div>
-    <div class="card">
-      <strong>Meera S.</strong>
-      <p>"Visa mock interview was extremely helpful — cleared in one attempt."</p>
-    </div>
-    <div class="card">
-      <strong>Samir A.</strong>
-      <p>"Excellent guidance for scholarships and loan documentation."</p>
-    </div>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer>
-  © 2025 Zhev Education Abroad Consultancy
-</footer>
-
+  <footer style="text-align:center;padding:12px;">© 2025 Zhev Education Abroad Consultancy</footer>
 </body>
 </html>
