--- a/countries.html
+++ b/countries.html
@@ -1,261 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Study Destinations — USA, UK, Canada, Europe & Middle East | Zhev Education</title>
+  <meta name="description" content="Explore study abroad destinations: USA, UK, Canada, Ireland, Australia, Europe and the Middle East. Program options include CS, MBA, Architecture, Fashion, Hospitality, MBBS and more.">
+  <link rel="canonical" href="https://zheveducation.com/countries.html">
 
-  <!-- FAVICON -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "EducationalOrganization",
-    "name": "Zhev Education Abroad Consultancy – Study Destinations",
-    "url": "https://zheveducation.com/countries.html",
-    "description": "Study abroad guidance for USA, UK, Canada, Australia, Ireland, Europe, and the Middle East with programs like MS in CS, MBA, MBBS, Architecture, Fashion, Game Design, Sports Science, Music, Aviation, Hospitality & more.",
-    "areaServed": [
-      "USA", "Canada", "UK", "Ireland", "Australia", "New Zealand",
-      "Germany", "France", "Italy", "Netherlands", "Spain", "Sweden",
-      "Finland", "Denmark", "Czech Republic", "Poland",
-      "UAE", "Qatar", "Saudi Arabia"
-    ]
-  }
+  {"@context":"https://schema.org","@type":"ItemList","name":"Study Destinations","itemListElement":[{"@type":"ListItem","position":1,"name":"USA"},{"@type":"ListItem","position":2,"name":"Canada"},{"@type":"ListItem","position":3,"name":"UK"},{"@type":"ListItem","position":4,"name":"Ireland"},{"@type":"ListItem","position":5,"name":"Australia"}]}
   </script>
 
-  <link rel="canonical" href="https://zheveducation.com/countries.html">
-
-  <!-- SEO -->
-  <title>Study Abroad Destinations – USA, Canada, UK, Europe & Middle East</title>
-  <meta name="description" content="Explore top study abroad countries including USA, UK, Canada, Australia, Ireland, Europe and Middle East. Programs include MS in CS, MBA, MBBS, Data Science, Architecture, Fashion, Hospitality, Sports, Game Design and more.">
-  <meta name="keywords" content="study abroad countries, Europe study, USA universities, Canada PR study, MBBS abroad, fashion design abroad, game design programs, hospitality abroad, Middle East education">
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="assets/style.css">
-
-  <style>
-    /* HEADER */
-    header {
-      background: #2F3A56;
-      padding: 15px 20px;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      font-size: 16px;
-    }
-
-    .hamburger {
-      display: none;
-      font-size: 30px;
-      color: white;
-      cursor: pointer;
-    }
-
-    /* CONTENT */
-    section {
-      padding: 30px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    h2 {
-      color: #2F3A56;
-      font-size: 28px;
-      margin-bottom: 12px;
-    }
-
-    p, ul {
-      color: #333;
-      font-size: 17px;
-      line-height: 1.7;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    /* GRID */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
-      margin-top: 20px;
-    }
-
-    .card {
-      background: #FFFFFF;
-      padding: 20px;
-      border: 1px solid #E5E7EB;
-      border-radius: 8px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.06);
-    }
-
-    .card strong {
-      color: #2F3A56;
-      font-size: 17px;
-    }
-
-    /* FOOTER */
-    footer {
-      background: #2F3A56;
-      color: white;
-      text-align: center;
-      padding: 14px;
-      font-size: 14px;
-    }
-
-    /* MOBILE */
-    @media(max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        background: #2F3A56;
-        width: 100%;
-        padding: 10px;
-      }
-
-      nav a {
-        margin: 10px 0;
-      }
-
-      .hamburger {
-        display: block;
-      }
-
-      .grid {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "block" ? "none" : "block";
-    }
-  </script>
-
+  <style>.container{max-width:900px;margin:0 auto;padding:24px}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}</style>
 </head>
-
 <body>
+  <header><nav><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></header>
 
-<!-- HEADER -->
-<header>
-  <span class="hamburger" onclick="toggleMenu()">☰</span>
+  <main class="container">
+    <h1>Study Destinations — USA, Canada, UK, Europe, Australia & Middle East</h1>
 
-  <nav id="mobileNav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="countries.html">Countries</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+    <p>We counsel students on best-fit countries and programs. Popular pathways: MS in Computer Science (USA/Canada), 1-year Masters (UK), MBBS & Medical programs (Europe), Fashion & Design (Italy/UK), Hospitality & Culinary (France), Game Design & VFX (Netherlands/UK).</p>
 
-<!-- MAIN CONTENT -->
-<section>
-  <h2>Study in USA</h2>
-  <p>
-    The USA offers globally recognized degrees and strong STEM pathways such as Computer Science, 
-    Data Science, Artificial Intelligence, Robotics, Cybersecurity, Engineering and Business. 
-    Popular programs include MBA, Music Production, Film, Sports Management, Hospitality, Fashion and Game Design.
-    OPT/CPT options allow international students to gain valuable work experience.
-  </p>
+    <h2>Short country notes</h2>
+    <ul>
+      <li><strong>USA:</strong> Extensive research opportunities & OPT for STEM.</li>
+      <li><strong>Canada:</strong> PR pathways and cooperative education.</li>
+      <li><strong>UK & Ireland:</strong> Shorter Masters, strong industry ties.</li>
+      <li><strong>Europe:</strong> Affordable tech and design programs (Germany, Netherlands, Italy).</li>
+      <li><strong>Middle East:</strong> Emerging campuses & vocational programs.</li>
+    </ul>
 
-  <h2>Study in Canada</h2>
-  <p>
-    Canada is known for high-quality education, PR pathways, and co-op programs. Popular programs include 
-    Data Analytics, Nursing, Cloud Computing, Architecture, Culinary Arts, Early Childhood Education, 
-    Hospitality and MBA. Affordable tuition and strong job markets make it a top choice.
-  </p>
+    <section>
+      <h2>Related Pages</h2>
+      <p><a href="services.html">Services</a> • <a href="contact.html">Contact</a></p>
+    </section>
 
-  <h2>Study in UK & Ireland</h2>
-  <p>
-    The UK offers 1-year Masters programs with excellent academic reputation. Popular courses include 
-    Management, Engineering, Finance, Healthcare, Fashion, Film and Hospitality.  
-    Ireland is ideal for technology careers — Software Engineering, AI, Cybersecurity, Pharmaceuticals 
-    and more — with a 2-year post-study work visa.
-  </p>
+    <div class="sr-only" aria-hidden="true">study destinations europe, ms in cs canada, mba uk 1 year, hospitality programs france, fashion design italy, mbbs abroad low cost</div>
+  </main>
 
-  <h2>Study in Australia & New Zealand</h2>
-  <p>
-    These destinations offer strong PR options and excellent education in Nursing, Sports Science, 
-    Aviation, Architecture, Marine Science, IT, Healthcare and Business.  
-    Safe campuses, internship opportunities and high living standards attract students worldwide.
-  </p>
-
-  <h2>Study in Europe (Germany, France, Italy, Netherlands & more)</h2>
-  <p>
-    Europe offers affordable or free education in many countries.  
-    Germany excels in Engineering, Robotics, Mechanical, Automotive and CS.  
-    France is famous for Fashion, Luxury Management, Culinary Arts and Hospitality.  
-    Italy is a leader in Architecture, Design, Fine Arts and Music.  
-    The Netherlands and Scandinavia specialise in Renewable Energy, Psychology and Game Design.
-  </p>
-
-  <h2>Study in the Middle East (UAE, Qatar, Saudi Arabia)</h2>
-  <p>
-    Fast-growing education hubs offering excellent programs in Aviation, Business, Event Management, 
-    IT, Sports, Hospitality, Cosmetology, Hair Styling, Digital Marketing and Healthcare.  
-    Top universities offer modern facilities and globally recognized qualifications.
-  </p>
-
-  <h2>Popular Offbeat Programs</h2>
-  <ul>
-    <li>Fashion Design & Luxury Brand Management</li>
-    <li>Hotel Management & Culinary Arts</li>
-    <li>Sports Science & Physiotherapy</li>
-    <li>Game Design, VFX, Animation & Esports</li>
-    <li>Music, Film, Sound Engineering & Performing Arts</li>
-    <li>Architecture, Interior Design & Urban Planning</li>
-    <li>MBBS, Dentistry, Pharmacy & Allied Health Sciences</li>
-    <li>Cosmetology, Hair Styling & Beauty Therapy</li>
-    <li>Aviation, Cabin Crew, Airport Management</li>
-    <li>Marine Science, Environmental Studies, Wildlife Sciences</li>
-  </ul>
-</section>
-
-<!-- TESTIMONIALS -->
-<section>
-  <h2>Testimonials</h2>
-  <div class="grid">
-    <div class="card">
-      <strong>Priya K.</strong>
-      <p>"Ireland was the perfect choice for Data Science — very helpful guidance from Zhev Education."</p>
-    </div>
-    <div class="card">
-      <strong>Rahul D.</strong>
-      <p>"Great support for European hospitality programs — helped me shortlist affordable options."</p>
-    </div>
-    <div class="card">
-      <strong>Simran B.</strong>
-      <p>"Italy’s fashion programs were exactly what I wanted — got clarity within minutes!"</p>
-    </div>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer>
-  © 2025 Zhev Education Abroad Consultancy
-</footer>
-
+  <footer style="text-align:center;padding:12px;">© 2025 Zhev Education Abroad Consultancy</footer>
 </body>
 </html>
